first docker image commit

--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -42,7 +42,7 @@
                       <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                          <div class="full">
                             <div class="center-desk">
-                               <div class="logo"><a href="#home"><img src="img/logo.png" style="max-width: 100%;"></a> 
+                               <div class="logo"><a href="/"><img src="img/logo.png" style="max-width: 100%;"></a> 
                                </div>
                             </div>
                          </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="copyright_main">
             <div class="container">
-                <p class="copy_text">© 2018 All Rights Reserved. <a href="https://html.design">NuralTec</a></p>
+                <p class="copy_text">© 2020 All Rights Reserved. <a href="https://html.design">NuralTec</a></p>
             </div>
         </div>
 
